...
      return;
    }
    setPage(page + 1);
    fetchPageProfiles();
  };
  return (
    <View style={styles.container} testID='pageProfileScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={pageProfileList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
