...
      <RoundedButton text='Friend' onPress={() => navigation.navigate('Friend')} testID='friendEntityScreenButton' />
      <RoundedButton text='FollowUser' onPress={() => navigation.navigate('FollowUser')} testID='followUserEntityScreenButton' />
      <RoundedButton text='FollowGroup' onPress={() => navigation.navigate('FollowGroup')} testID='followGroupEntityScreenButton' />
      <RoundedButton text='FollowPage' onPress={() => navigation.navigate('FollowPage')} testID='followPageEntityScreenButton' />
      <RoundedButton text='FileInfo' onPress={() => navigation.navigate('FileInfo')} testID='fileInfoEntityScreenButton' />
      <RoundedButton text='PagePost' onPress={() => navigation.navigate('PagePost')} testID='pagePostEntityScreenButton' />
      <RoundedButton text='PageProfile' onPress={() => navigation.navigate('PageProfile')} testID='pageProfileEntityScreenButton' />
      <RoundedButton text='GroupPost' onPress={() => navigation.navigate('GroupPost')} testID='groupPostEntityScreenButton' />
      <RoundedButton text='Post' onPress={() => navigation.navigate('Post')} testID='postEntityScreenButton' />
      <RoundedButton text='PostComment' onPress={() => navigation.navigate('PostComment')} testID='postCommentEntityScreenButton' />
      <RoundedButton text='PostLike' onPress={() => navigation.navigate('PostLike')} testID='postLikeEntityScreenButton' />
      <RoundedButton text='GroupProfile' onPress={() => navigation.navigate('GroupProfile')} testID='groupProfileEntityScreenButton' />
      <RoundedButton text='NewsFeed' onPress={() => navigation.navigate('NewsFeed')} testID='newsFeedEntityScreenButton' />
...
        testID='videoLiveStreamBufferEntityScreenButton'
      />
      <RoundedButton text='TopicInterest' onPress={() => navigation.navigate('TopicInterest')} testID='topicInterestEntityScreenButton' />
      <RoundedButton text='TodoList' onPress={() => navigation.navigate('TodoList')} testID='todoListEntityScreenButton' />
      <RoundedButton text='Event' onPress={() => navigation.navigate('Event')} testID='eventEntityScreenButton' />
      <RoundedButton text='BaseInfo' onPress={() => navigation.navigate('BaseInfo')} testID='baseInfoEntityScreenButton' />
      <RoundedButton text='Permission' onPress={() => navigation.navigate('Permission')} testID='permissionEntityScreenButton' />
      <RoundedButton text='ClassInfo' onPress={() => navigation.navigate('ClassInfo')} testID='classInfoEntityScreenButton' />
      <RoundedButton text='HistoryUpdate' onPress={() => navigation.navigate('HistoryUpdate')} testID='historyUpdateEntityScreenButton' />
      {/* jhipster-react-native-entity-screen-needle */}
    </ScrollView>
  );
}
...
