...
      return;
    }
    setPage(page + 1);
    fetchPermissions();
  };
  return (
    <View style={styles.container} testID='permissionScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={permissionList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
